fix: page overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   padding: 20px;
   margin: 0;
   background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
